fix: placeholders too short

--- a/app/static/css/public.css
+++ b/app/static/css/public.css
@@ -92,3 +92,7 @@
 	width: 3rem;
 	height: 3rem;
 }
+
+#demoResultsTable .placeholder {
+	min-width: 120px;
+}
